# vegomatic

./: .gitignore  README.md  README_gqlfetch.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: example_datafetch.py  example_gqlf_github.py  example_gqlf_linear.py  example_gqlfetch.py  github_fetch.py  linear_fetch.py
src/vegomatic/: __init__.py
src/vegomatic/datafetch/: datafetch.py
src/vegomatic/datafile/: __init__.py  fileparse.py  fileset.py
src/vegomatic/gqlf_github/: __init__.py  gqlfetch_github.py
src/vegomatic/gqlf_linear/: gqlfetch_linear.py
src/vegomatic/gqlfetch/: __init__.py  gqlfetch.py
src/vegomatic/simpledb/: simpledb.py
tests/: test_gqlfetch.py  test_{}.py
