[project]
name = "vegomatic"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Gooderum",email = "3393412+markfrommn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "vegomatic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
